--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="w-full flex justify-between items-center max-w-7xl mx-auto px-5">
             <a href="#" class="flex items-center gap-2">
                 <img src="logo.png" alt="logo" class="w-9 h-9 object-contain">
-                <p class="text-[18px] font-bold">Rhythm <span class="hidden sm:block">| Portfolio</span></p>
+                <p class="text-[18px] font-bold">Harshal <span class="hidden sm:block">| Portfolio</span></p>
             </a>
             <ul class="list-none hidden sm:flex flex-row gap-10">
                 <li><a href="#home" class="text-[18px] font-medium hover:text-accent">Home</a></li>
@@ -115,7 +115,7 @@
     <!-- Home Section -->
     <section id="home" class="h-screen flex items-center justify-center bg-gray-900">
         <div class="text-center">
-            <h1 id="line1" class="text-5xl font-bold mb-4">Hi, I'm Rhythm Arya</h1>
+            <h1 id="line1" class="text-5xl font-bold mb-4">Hi, I'm harshal Patel</h1>
             <h3 id="line2" class="text-2xl mb-4 text-accent"></h3>
             <p id="line3" class="text-xl mb-4">I design and code beautifully simple things, and I love what I do.</p>
             <a href="#contact" class="bg-accent py-2 px-4 rounded-lg">Contact Me</a>
@@ -129,34 +129,24 @@
             <div class="grid grid-cols-10 sm:grid-cols-2 lg:grid-cols-3 gap-100">
                 <div class="bg-card p-5 rounded-lg">
                     <img src="project12.jpg" alt="Project 1" class="w-full h-30 object-cover rounded-lg mb-4">
-                    <h3 class="text-2xl font-bold mb-2">AInvest | Python, Flask, TensorFlow, Yahoo Finance API, Kotak Neo API June 2024 – Present</h3>
-                    <p class="text-secondary">• Developed an AI-driven algorithmic trading system designed to optimize index trading strategies through predictive
-                        analytics, automated trade execution, and comprehensive risk management.
-                        • Implemented predictive models using LSTM and Random Forest for trend forecasting, and automated trade
-                        execution using predefined strategies and the Kotak Neo API.
-                        • Enhanced decision-making processes and reduced the need for manual intervention, significantly improving overall
-                        trading performance.</p>
+                    <h3 class="text-2xl font-bold mb-2">INFO-HUB-NGO DATABASE | Data Base Management June 2023 – Present</h3>
+                    <p class="text-secondary">I worked on a database management project for an NGO. Our team develpoed a project a website for NGO 
+                    ,making a real time use of DBMS. We did our SI for an NGO, there we discovered a basic problem that mostly all the NGO faceed. We came up with a 
+                    solution to met the requirements of the NGO</p>
                 </div>
                 <div class="bg-card p-5 rounded-lg">
                     <img src="projectx.jpg" alt="Project 2" class="w-full h-30 object-cover rounded-lg mb-4">
-                    <h3 class="text-2xl font-bold mb-2">SimSDC | Python, ROS 2, Gazebo, OpenCV, TensorFlow March 2024 – May 2024</h3>
-                    <p class="text-secondary">• Developed a comprehensive simulation environment for self-driving cars, integrating vehicle modeling, lane
-                        detection, and sign classification.
-                        • Defined the physical structure and sensors using URDF and Xacro, utilized Colcon for building and integration,
-                        and launched the simulation in Gazebo for a realistic virtual environment.
-                        • Implemented lane detection using OpenCV (image thresholding, edge detection, Hough transform, HSL
-                        adjustments) and created a CNN-based traffic sign classification system using TensorFlow and Keras (data
-                        preprocessing, custom CNN architecture, transfer learning, fine-tuning, validation).</p>
+                    <h3 class="text-2xl font-bold mb-2">Google Maps Research March 2022 – May 2022</h3>
+                    <p class="text-secondary">We did a research project based on the working of google maps. We decided to go to the roots of the problem 
+                    and get the solution to it. Our research mainly leds us to  the dijkstra's algorithm and A* algorithm thats what covers 
+                    most of the basic google maps working. This algorithms were used to get the minimum distance to the location or to get the 
+                    shortest distance possible between the location points. </p>
                 </div>
                 <div class="bg-card p-5 rounded-lg">
                     <img src="project69.png" alt="Project 3" class="w-full h-20 object-cover rounded-lg mb-4">
-                    <h3 class="text-2xl font-bold mb-2">VoteChain | Python, Hardhat, Ethereum, Vanilla JS, Solidity, Node.js, Docker January 2024 - March 2024</h3>
-                    <p class="text-secondary">• Developed a full-stack decentralized voting application using Node.js and Hardhat, ensuring secure and transparent
-                        voting processes through blockchain.
-                        • Created a Solidity smart contract to manage the voting mechanisms and built a Node.js backend that interfaces
-                        with Ethereum via Web3.js for seamless interactions.
-                        • Designed a responsive frontend with Vanilla JavaScript and implemented Dockerization for consistent deployment
-                        across different environments, enhancing the overall development workflow.
+                    <h3 class="text-2xl font-bold mb-2">Polar Codes Research Project June 20243 - August 2023</h3>
+                    <p class="text-secondary">Our team made a in depth research for polar codes in digital communication, its working, how are they benifiting
+                        . We made use of results from various graphs, Monte-Carlo Simulation,etc. 
                     </p>
                 </div>
             </div>
@@ -172,13 +162,13 @@
                     <img src="imgg.jpg" alt="About Me" class="rounded-lg shadow-lg">
                 </div>
                 <div class="flex-1 md:ml-10 mt-10 md:mt-0">
-                    <h3 class="text-2xl font-bold mb-2">Rhythm Arya</h3>
-                    <p class="text-secondary mb-4">I am a passionate Machine Learning Developer with experience in building AI-driven solutions. I love to explore new technologies and apply them in my projects to create innovative and efficient systems.</p>
+                    <h3 class="text-2xl font-bold mb-2">Harshal Patel</h3>
+                    <p class="text-secondary mb-4">I am a passionate web-developer and intend to make solution in the form of website for the clients or users.</p>
                     <ul class="list-disc list-inside text-secondary">
                         <li>Bachelor's in Computer Science</li>
-                        <li>Experience with Python, TensorFlow, PyTorch</li>
-                        <li>Strong background in data analysis and modeling</li>
-                        <li>Enthusiastic about algorithmic trading and autonomous systems</li>
+                        <li>Experience with React.js, Tailwindcss, Node.js</li>
+                        <li>Strong background in Database Management and UI/UX design</li>
+                        <li>Enthusiastic about new trending fields in development sector.</li>
                     </ul>
                 </div>
             </div>
@@ -198,7 +188,7 @@
                 <div class="bg-tertiary p-10 rounded-lg text-center shadow-lg">
                     <i class="ri-brain-line text-5xl text-accent mb-5"></i>
                     <h3 class="text-2xl font-bold mb-2">Machine Learning</h3>
-                    <p class="text-secondary">Developing and implementing machine learning models for various applications.</p>
+                    <p class="text-secondary">Developing and implementing real-life based solution to the user problems.</p>
                 </div>
                 <div class="bg-tertiary p-10 rounded-lg text-center shadow-lg">
                     <i class="ri-search-line text-5xl text-accent mb-5"></i>
@@ -242,7 +232,7 @@
 
     <!-- Footer -->
     <footer class="py-10 bg-black-gradient text-center">
-        <p class="text-secondary">© 2024 Rhythm Arya. All Rights Reserved.</p>
+        <p class="text-secondary">© 2024 Harshal Patel. All Rights Reserved.</p>
     </footer>
 
     <script>
