--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
-    <title>Rhythm's Portfolio</title>
+    <title>Harshal's Portfolio</title>
     <style>
         .black-gradient {
             background: linear-gradient(135deg, #333, #444);
@@ -115,7 +115,7 @@
     <!-- Home Section -->
     <section id="home" class="h-screen flex items-center justify-center bg-gray-900">
         <div class="text-center">
-            <h1 id="line1" class="text-5xl font-bold mb-4">Hi, I'm harshal Patel</h1>
+            <h1 id="line1" class="text-5xl font-bold mb-4">Hi, I'm Harshal Patel</h1>
             <h3 id="line2" class="text-2xl mb-4 text-accent"></h3>
             <p id="line3" class="text-xl mb-4">I design and code beautifully simple things, and I love what I do.</p>
             <a href="#contact" class="bg-accent py-2 px-4 rounded-lg">Contact Me</a>
@@ -301,9 +301,9 @@
             const line2 = document.getElementById('line2');
             const line3 = document.getElementById('line3');
             const texts = [
-                "A Machine Learning Engineer.",
-                "A Data Analyst .",
-                "A Data Engineer."
+                "A Web Developer.",
+                "A Web Analyst .",
+                "A DataBase Manager ."
               
             ];
 
