--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <nav id="navbar" class="w-full py-5 fixed top-0 z-20 bg-transparent">
         <div class="w-full flex justify-between items-center max-w-7xl mx-auto px-5">
             <a href="#" class="flex items-center gap-2">
-                <img src="logo.png.png" alt="logo" class="w-9 h-9 object-contain">
+                <img src="jjk.png" alt="logo" class="w-9 h-9 object-contain">
                 <p class="text-[18px] font-bold">Harshal <span class="hidden sm:block">| Portfolio</span></p>
             </a>
             <ul class="list-none hidden sm:flex flex-row gap-10">
